# cc-store

./: API_DESC.md  Cargo.toml  README.md
scripts/: install.sh  uninstall.sh
src/: main.rs
