[package]
name = "cc-store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.8"
